fix padding and collapse

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
-  padding-top: 70px;
+  padding-top: 4.5rem;
+  padding-bottom: 1rem;
   touch-action: none;
 }
 
